--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^0.21.3",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
-        "laravel-mix": "^6.0.6",
+        "jquery": "^3.6.0",
+        "laravel-mix": "^6.0.29",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
+        "sass": "^1.39.0",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
-        "vue-loader": "^15.9.7",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "moment": "^2.29.1",
+        "v-nepalidatepicker": "^1.2.4",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.2",
         "vuex": "^3.6.2"
