--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "moment": "^2.29.1",
         "v-nepalidatepicker": "^1.2.4",
+        "v-toaster": "^1.0.3",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.2",
         "vuex": "^3.6.2"
