--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "chart.js": "2.9.4",
         "moment": "^2.29.1",
         "v-nepalidatepicker": "^1.2.4",
         "v-toaster": "^1.0.3",
+        "vue-chartjs": "^3.5.1",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.2",
         "vuex": "^3.6.2"
